--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-dbt-core==1.1.0
-dbt-bigquery==1.1.0
+dbt-core==1.7.0
+dbt-bigquery==1.7.0
+dbt-postgres==1.7.0
+pre-commit==3.4.0
+google-cloud-datacatalog==3.8.1
 markupsafe==2.0.1
-psycopg2-binary==2.9.3
